[metadata]
name = panther
version = attr: panther.__version__
author = Panther Team
author_email = panther@protonmail.com
description = Panther - Crypto Trading Bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thefieryleo/panther
project_urls =
    Bug Tracker = https://github.com/thefieryleo/panther/issues
license = GPLv3
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS
    Operating System :: Unix
    Topic :: Office/Business :: Financial :: Investment


[options]
zip_safe = False
include_package_data = True
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock

packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    panther = panther.main:main

[flake8]
#ignore =
max-line-length = 100
max-complexity = 12
exclude =
    .git,
    __pycache__,
    .eggs,
    user_data,

[mypy]
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True
